--- a/iTunesSearch/TableViewCell.xib
+++ b/iTunesSearch/TableViewCell.xib
@@ -39,11 +39,14 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Duração" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oX6-Xr-sFE">
-                        <rect key="frame" x="216" y="51" width="69" height="21"/>
+                        <rect key="frame" x="211" y="61" width="69" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AOO-b3-9R4">
+                        <rect key="frame" x="163" y="8" width="91" height="52"/>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="6Z5-yj-wnl" secondAttribute="trailing" id="20H-3b-RZ8"/>
@@ -57,6 +60,7 @@
             <connections>
                 <outlet property="duracao" destination="oX6-Xr-sFE" id="I6q-Z0-pEJ"/>
                 <outlet property="genero" destination="fgF-h6-Ogv" id="moI-CU-QAZ"/>
+                <outlet property="image" destination="AOO-b3-9R4" id="ToP-eq-IIv"/>
                 <outlet property="nome" destination="UIA-JU-luV" id="ubX-WX-gam"/>
                 <outlet property="pais" destination="2g5-Yd-EpG" id="fur-fv-OqP"/>
                 <outlet property="tipo" destination="6Z5-yj-wnl" id="vYj-HE-tLd"/>
